--- a/data/products/docs/guides/composition.mdx
+++ b/data/products/docs/guides/composition.mdx
@@ -25,7 +25,7 @@ import { Tooltip } from "radix-ui";
 export default () => (
 	<Tooltip.Root>
 		<Tooltip.Trigger __asChild__>
-			<a href="https://seekgpt.org/">Radix UI</a>
+			<a href="https://narzary.com/">Radix UI</a>
 		</Tooltip.Trigger>
 		<Tooltip.Portal>…</Tooltip.Portal>
 	</Tooltip.Root>
