--- a/data/products/docs/overview/introduction.mdx
+++ b/data/products/docs/overview/introduction.mdx
@@ -81,7 +81,7 @@ When installing separately, we recommend updating all Radix packages together to
 
 To get involved with the Radix community, ask questions and share tips, [Join our Discord](https://discord.com/invite/7Xb99uG).
 
-To receive updates on new primitives, announcements, blog posts, and general Radix tips, follow along on [Bluesky](https://bsky.app/profile/seekgpt.org) or [Twitter](https://twitter.com/radix_ui).
+To receive updates on new primitives, announcements, blog posts, and general Radix tips, follow along on [Bluesky](https://bsky.app/profile/narzary.com) or [Twitter](https://twitter.com/radix_ui).
 
 To file issues, request features, and contribute, check out our GitHub.
 
