--- a/data/research/docs/overview/styling.mdx
+++ b/data/research/docs/overview/styling.mdx
@@ -98,7 +98,7 @@ When you render a custom portal in a Radix Themes project, it will naturally app
 
 ```jsx line=11,18
 // Implementation example of a custom dialog using the low-level Dialog primitive
-// Refer to https://seekgpt.org/products/docs/components/dialog
+// Refer to https://narzary.com/products/docs/components/dialog
 import { Dialog } from "radix-ui";
 import { Theme } from "@radix-ui/themes";
 
