--- a/data/company/docs/overview/about-us.mdx
+++ b/data/company/docs/overview/about-us.mdx
@@ -1,16 +1,49 @@
 ---
-metaTitle: About Us | NarzaryAI | SeekGPT
-metaDescription: NarzaryAI or SeekGPT
+metaTitle: About Us | Narzary Engineering & Consultancy Pvt. Ltd.
+metaDescription: Narzary Engineering & Consultancy Pvt. Ltd. based in Kokrajhar, BTC, Assam, India - 783370
 ---
 
-# About the Company
 
-<Description>NarzaryAI is the builder of the SeekGPT. SeekGPT is an ethically grounded foundational LLM model from India.</Description>
+# About Narzary Engineering & Consultancy Pvt. Ltd.
 
-## About SeekGPT
+<Description>Narzary Engineering & Consultancy Pvt. Ltd. is dedicated to providing comprehensive engineering, technology, and design services to individuals, government bodies, corporations, and organizations in India and abroad. Our mission is to deliver high-quality, innovative solutions that drive progress and add value for our clients and partners.</Description>
 
-SeekGPT is a cutting-edge large language model (LLM) developed by NarzaryAI. It is designed to provide accurate, ethical, and context-aware responses for a wide range of applications, including research, education, and enterprise solutions. SeekGPT emphasizes responsible AI practices and is built with a focus on transparency and user safety.
+## Our Main Objectives
 
-## About NarzaryAI
+- Deliver excellence in civil engineering, information technology, planning, architecture, and project management.
+- Support clients with end-to-end solutions, from concept to completion, across diverse sectors and geographies.
 
-NarzaryAI is an innovative AI company based in India, dedicated to advancing artificial intelligence technologies with a strong commitment to ethical standards. The team at NarzaryAI combines expertise in machine learning, natural language processing, and responsible AI development to create solutions that empower users and organizations. NarzaryAI’s mission is to make AI accessible, trustworthy, and beneficial for society.
+## Core Services & Functions
+
+### Civil Engineering & Project Management
+
+- Undertake, execute, and manage all forms of civil engineering works, including building construction, infrastructure projects, roads, bridges, and more.
+- Provide project estimation, costing, quantity surveying, project management, and related consultancy for public and private sector clients.
+
+### Planning, Design & Consultancy
+
+- Offer planning and consultancy services for town planning, urban and regional planning, master planning, site development, land use planning, and smart city solutions.
+- Prepare and submit detailed project reports (DPRs), feasibility studies, and environmental impact assessments.
+
+### Information Technology & Software Services
+
+- Deliver software development, customization, implementation, maintenance, and testing services.
+- Develop and maintain web-based applications, websites, e-commerce platforms, portals, and all forms of web development and maintenance.
+
+### Architectural & Building Design
+
+- Provide professional design services including architectural design, building design, interior and exterior decoration, and space planning for residential, commercial, and industrial properties.
+
+### Business Operations & Support
+
+- Acquire, manage, and operate land, buildings, workshops, machinery, and equipment necessary for our business.
+- Enter into contracts, raise funds, invest, and manage intellectual property to support our operations and growth.
+
+### People, Promotion & Growth
+
+- Recruit, train, and employ skilled personnel, managers, and technicians.
+- Market, advertise, and promote our services through various media, always striving to deliver value and excellence.
+
+## Commitment
+
+We are committed to doing all things incidental or conducive to the attainment of our objectives, ensuring that our services remain relevant, ethical, and impactful for all stakeholders.
