--- a/data/company/docs/contacts/contacts.mdx
+++ b/data/company/docs/contacts/contacts.mdx
@@ -10,14 +10,14 @@ For project inquiries, consultancy, services, or general questions, please reach
 ## Address
 
 J.D. Road, Opposite Pagla Baba Shiv Mandir  
-Near BTC Secretariat, BTC  
+Near BTC Secretariat, BTC,  
 Kokrajhar, Assam, India - 783370
 
 ## Contact Details
 
-- **Phone:** [Add phone number here]
-- **Email:** [Add email address here]
-- **Website:** [Add website URL here]
+- **Phone:** +91
+- **Email:** necpl25@gmail.com
+- **Website:** www.narzary.com
 
 ## Office Hours
 
@@ -25,7 +25,7 @@ Monday to Saturday: 9:30 AM – 6:00 PM IST
 
 ## Directions
 
-Located opposite Pagla Baba Shiv Mandir, near BTC Secretariat in Kokrajhar, Assam.
+Located opposite Pagla Baba Shiv Mandir, near BTC Secretariat in Dimalgaon, Kokrajhar, Assam - 783370.
 
 ---
 
